# bo-mpc

./: .gitignore  TODO.md  fig_l_value_experiment.pptx  fig_mpc.pptx  fig_mpc_plan.pptx  fig_ratio_experiment.pptx  paper.tex  refs.bib  requirements.txt  setup.cfg
log/0/: log.txt
log/0/0.50_1.06/: log.txt  sim58549.npz
log/0/0.53_1.50/: log.txt  sim58549.npz
log/0/0.59_0.65/: log.txt  sim58549.npz
log/0/0.80_0.50/: log.txt  sim58549.npz
log/0/0.85_0.69/: log.txt  sim58549.npz
log/0/0.88_1.00/: log.txt  sim58549.npz
log/0/0.89_1.14/: log.txt  sim58549.npz
log/0/0.91_0.65/: log.txt  sim58549.npz
log/0/0.93_1.25/: log.txt  sim58549.npz
log/0/0.94_1.03/: log.txt  sim58549.npz
log/0/0.94_1.04/: log.txt  sim58549.npz
log/0/0.99_0.96/: log.txt  sim58549.npz
log/0/1.01_1.09/: log.txt  sim58549.npz
log/0/1.01_1.50/: log.txt  sim58549.npz
log/0/1.04_0.90/: log.txt  sim58549.npz
log/1/: log.txt
log/10/: log.txt
log/11/: log.txt
log/12/: log.txt
log/13/: log.txt
log/14/: log.txt
log/15/: log.txt
log/16/: log.txt
log/2/: log.txt
log/3/: log.txt
log/4/: log.txt
log/5/: log.txt
log/6/: log.txt
log/7/: log.txt
log/8/: log.txt
log/9/: log.txt
src/: cli_interface.py  controller.py  input_ratio.py  main.py  simulation.py  visualize_gp.py  visualize_l_estimation.py  visualize_log.py
src/bo_mpc/: controller.py  l_estimation.py  main.py  simulation.py  visualize_gp.py  visualize_input_ratio.py  visualize_l_estimation.py  visualize_simulation.py
src/models/: kinematric_bicycle_model.py
src/path/: path_generation.py
(+2478 files in other folders)
