[metadata]
name = bo-mpc
version = 0.0.1
author = Frederic Dlugi
author_email = frederic.dlugi@student.uni-luebeck.de
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FredericDlugi/bo-mpc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    bayesian-optimization
    numpy
    matplotlib
    scipy
    scikit-learn

[options.packages.find]
where = src